# llava

./: .env.example  .gitignore  pyproject.toml
configs/: example.yaml
src/models/clip/: clip.py  text_transformer.py  vit.py
src/models/clip/modules/: block.py
src/models/llama/: llama.py
src/models/llama/modules/: block.py
src/models/modules/: attention.py  block.py  components.py  ffn.py
